--- a/fitsmeright/Resource/Layout/View/ClosetFormView.xib
+++ b/fitsmeright/Resource/Layout/View/ClosetFormView.xib
@@ -23,11 +23,11 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W7n-va-vEq">
-                    <rect key="frame" x="15" y="16.5" width="100" height="17"/>
+                    <rect key="frame" x="15" y="15" width="100" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="L2Q-DQ-wRA"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
